--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="delay_time; URL=https://bio.link/smox" />
+<meta http-equiv="refresh" content="5; URL=https://bio.link/smox/" />
